--- a/Quiz App/index.html
+++ b/Quiz App/index.html
@@ -15,6 +15,14 @@
     
     <script>
         var ans = prompt("Your answer:");
+
+        if (ans === "B" || "b") {
+            alert(true);
+        }
+
+        else {
+            alert(false);
+        }
     </script>
 </body>
 </html>
