--- a/Quiz App/index.html
+++ b/Quiz App/index.html
@@ -17,14 +17,14 @@
         setTimeout(function() {
             var ans = prompt("Your answer:");
 
-            if (ans === "B" || "b") {
+            if (ans === "B" || ans === "b") {
                 alert(true);
             }
 
             else {
                 alert(false);
             }
-        }, 2000);
+        }, 1000);
     </script>
 </body>
 </html>
