styles and validation

--- a/Quiz App/index.html
+++ b/Quiz App/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h2>What is a snail?</h2>
-    <p>A: Insect</p>
-    <p>B: Mollusc</p>
-    <p>C: Amphibian</p>
-    <p>D: Mammal</p>
+    <p>A: Insect</p><img class="cross" src="images/cross.png" />
+    <p>B: Mollusc</p><img class="tick" src="images/tick.png" />
+    <p>C: Amphibian</p><img class="cross" src="images/cross.png" />
+    <p>D: Mammal</p><img class="cross" src="images/cross.png" />
     
     <script>
         setTimeout(function() {
