--- a/Quiz App/index.html
+++ b/Quiz App/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link type="text/css" rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h2>What is a snail?</h2>
-    <p>A: Insect</p><img class="cross" src="images/cross.png" />
-    <p>B: Mollusc</p><img class="tick" src="images/tick.png" />
-    <p>C: Amphibian</p><img class="cross" src="images/cross.png" />
-    <p>D: Mammal</p><img class="cross" src="images/cross.png" />
+    <p>A: Insect<img class="cross" src="images/cross.png" /></p>
+    <p>B: Mollusc<img class="tick" src="images/tick.png" /></p>
+    <p>C: Amphibian<img class="cross" src="images/cross.png" /></p>
+    <p>D: Mammal<img class="cross" src="images/cross.png" /></p>
     
     <script>
         setTimeout(function() {
