--- a/Quiz App (Button)/index.html
+++ b/Quiz App (Button)/index.html
@@ -10,23 +10,13 @@
 </head>
 <body>
     <h2>What is a snail?</h2>
-    <p>A: Insect<img class="cross" src="images/cross.png" /></p>
-    <p>B: Mollusc<img class="tick" src="images/tick.png" /></p>
-    <p>C: Amphibian<img class="cross" src="images/cross.png" /></p>
-    <p>D: Mammal<img class="cross" src="images/cross.png" /></p>
+    <label>A: Insect<img class="cross" src="images/cross.png" /></label>
+    <label>B: Mollusc<img class="tick" src="images/tick.png" /></label>
+    <label>C: Amphibian<img class="cross" src="images/cross.png" /></label>
+    <label>D: Mammal<img class="cross" src="images/cross.png" /></label>
     
     <script>
-        setTimeout(function() {
-            var ans = prompt("Your answer:");
-
-            if (ans === "B" || ans === "b") {
-                alert(true);
-            }
-
-            else {
-                alert(false);
-            }
-        }, 0000);
+        
     </script>
 </body>
 </html>
