--- a/Quiz App (Button)/index.html
+++ b/Quiz App (Button)/index.html
@@ -11,13 +11,13 @@
 <body>
     <h2>What is a snail?</h2>
     <form>
-    <label>A: Insect<input name="assassin" class="radio" type="radio" /><img id="c1" class="cross" src="images/cross.png" /></label>
+    <label>A: Insect<input id="c1h" name="assassin" class="radio" type="radio" /><img id="c1" class="cross" src="images/cross.png" /></label>
     <br />
-    <label>B: Mollusc<input name="assassin" class="radio" type="radio" /><img id="t" class="tick" src="images/tick.png" /></label>
+    <label>B: Mollusc<input id="th" name="assassin" class="radio" type="radio" /><img id="t" class="tick" src="images/tick.png" /></label>
     <br />
-    <label>C: Amphibian<input name="assassin" class="radio" type="radio" /><img id="c2" class="cross" src="images/cross.png" /></label>
+    <label>C: Amphibian<input id="c2h" name="assassin" class="radio" type="radio" /><img id="c2" class="cross" src="images/cross.png" /></label>
     <br />
-    <label>D: Mammal<input name="assassin" class="radio" type="radio" /><img id="c3" class="cross" src="images/cross.png" /></label>
+    <label>D: Mammal<input id="c3h" name="assassin" class="radio" type="radio" /><img id="c3" class="cross" src="images/cross.png" /></label>
     </form>
 
     <script>
